--- a/TCPChat.Client/TCPChat.Client.csproj
+++ b/TCPChat.Client/TCPChat.Client.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DevExpressMvvm" Version="21.1.5" />
+  </ItemGroup>
+
 </Project>
